<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.moutaigua.ultimatetictactoe.ActivityLogin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.24" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_txtview_title"
            android:layout_centerInParent="true"
            android:text="@string/login_txtview_title"
            android:textSize="25dp"
            android:textColor="@android:color/white"
            android:gravity="center" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.76"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal">

        <!--Email Login-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <TextView
                style="@style/LogInUpError"
                android:layout_marginBottom="20dp"
                android:id="@+id/activity_login_txtview_result" />

            <EditText
                style="@style/LoginInput"
                android:id="@+id/activity_login_editxt_email"
                android:inputType="textEmailAddress"
                android:hint="@string/login_editxt_email_hint"/>
            <EditText
                style="@style/LoginInput"
                android:id="@+id/activity_login_editxt_password"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:hint="@string/login_editxt_password_hint"/>
            <Button
                style="@style/LogInUpButton"
                android:id="@+id/activity_login_btn_sign_in"
                android:layout_marginTop="10dp"
                android:text="@string/login_btn_sign_in"
                 />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_login_txtview_forget_password"
                    android:layout_alignParentLeft="true"
                    android:text="@string/login_txtview_forget_password"
                    android:textColor="@android:color/white"
                    android:textSize="15dp"
                    android:textStyle=""/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_login_txtview_sign_up"
                    android:layout_alignParentRight="true"
                    android:text="@string/login_txtview_sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="15dp"
                    android:textStyle=""/>
                </RelativeLayout>

            </LinearLayout>


        <!--Dividor-->
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">
            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@android:color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="15dp"/>

            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/white" />
            </RelativeLayout>


        <!--Third Party-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/activity_login_btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                android:gravity="center"/>

            </LinearLayout>

    </LinearLayout>


</LinearLayout>
